# visibility-buffer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
content/scene/cube/: cube.gltf
content/scene/dragon/: dragon.gltf
content/shader/: batch_compaction.comp  clear_buffers.comp  shader_defs.glsl  triangle_filtering.comp  triangle_filtering_pass.comp  visibility_buffer_pass.frag  visibility_buffer_pass.vert  visibility_buffer_shading_pass.frag  visibility_buffer_shading_pass.vert
src/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  main.cpp  renderer.cpp  renderer.h  rsg.cpp  rsg.h  scene.cpp  scene.h  scene_importer.cpp  scene_importer.h  triangle_filtering_pass.cpp  triangle_filtering_pass.h  visibility_bufer_shading_pass.cpp  visibility_bufer_shading_pass.h  visibility_buffer_pass.cpp  visibility_buffer_pass.h
